--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "check": "deno lint && deno fmt",
-    "install": "deno install --import-map=import_map.json --name=snel -A -f -r --no-check --unstable ./cli.ts"
+    "install": "deno install --import-map=import_map.json --name=snel -A -f -r --no-check --unstable ./cli.ts",
+    "info": "deno info ./cli.ts --import-map=import_map.json"
   }
 }
